--- a/src/index.html
+++ b/src/index.html
@@ -25,5 +25,6 @@
 
     <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
     <script src="./index.js"></script>
+    <script src="./hamburger.js"></script>
   </body>
 </html>
