--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ice Cream</title>
+    <title>Ice cream made with passion</title>
     <link rel="icon" href="./images/icon-logo.png" type="image/x-icon" />
     <link
       rel="stylesheet"
