okno modalne  i sprite

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,11 @@
 
     <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
 
+    <!-- script for hamburger/modal menu -->
     <script src="./hamburger.js"></script>
+    <script src="./modal.js"></script>
+    <!-- script for hamburger/modal menu -->
+
     <!-- script for slick slider -->
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
