add/modal readmore

--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,7 @@
     <!-- script for hamburger/modal menu -->
     <script src="./hamburger.js"></script>
     <script src="./modal.js"></script>
+    <script src="./readmoremodal.js"></script>
     <!-- script for hamburger/modal menu -->
 
     <!-- script for slick slider -->
