--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,52 @@
     />
   </head>
   <body>
+    <script>
+      function myFunction1() {
+        var dots = document.getElementById('dots1');
+        var moreText = document.getElementById('more1');
+
+        if (dots.style.display === 'none') {
+          dots.style.display = 'inline';
+          moreText.style.display = 'none';
+        } else {
+          dots.style.display = 'none';
+          moreText.style.display = 'inline';
+        }
+      }
+    </script>
+    <script>
+      function myFunction2() {
+        var dots = document.getElementById('dots2');
+        var moreText = document.getElementById('more2');
+
+        if (dots.style.display === 'none') {
+          dots.style.display = 'inline';
+
+          moreText.style.display = 'none';
+        } else {
+          dots.style.display = 'none';
+
+          moreText.style.display = 'inline';
+        }
+      }
+    </script>
+    <script>
+      function myFunction3() {
+        var dots = document.getElementById('dots3');
+        var moreText = document.getElementById('more3');
+
+        if (dots.style.display === 'none') {
+          dots.style.display = 'inline';
+
+          moreText.style.display = 'none';
+        } else {
+          dots.style.display = 'none';
+
+          moreText.style.display = 'inline';
+        }
+      }
+    </script>
     <include src="./partials/header-hero.html"></include>
     <include src="./partials/products.html"></include>
     <include src="./partials/about.html"></include>
