--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,17 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
       rel="stylesheet"
     />
+    <style>
+      #more1 {
+        display: none;
+      }
+      #more2 {
+        display: none;
+      }
+      #more3 {
+        display: none;
+      }
+    </style>
   </head>
   <body>
     <script>
