--- a/src/index.html
+++ b/src/index.html
@@ -18,65 +18,9 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
       rel="stylesheet"
     />
-    <style>
-      #more1 {
-        display: none;
-      }
-      #more2 {
-        display: none;
-      }
-      #more3 {
-        display: none;
-      }
-    </style>
   </head>
   <body>
-    <script>
-      function myFunction1() {
-        var dots = document.getElementById('dots1');
-        var moreText = document.getElementById('more1');
-
-        if (dots.style.display === 'none') {
-          dots.style.display = 'inline';
-          moreText.style.display = 'none';
-        } else {
-          dots.style.display = 'none';
-          moreText.style.display = 'inline';
-        }
-      }
-    </script>
-    <script>
-      function myFunction2() {
-        var dots = document.getElementById('dots2');
-        var moreText = document.getElementById('more2');
-
-        if (dots.style.display === 'none') {
-          dots.style.display = 'inline';
-
-          moreText.style.display = 'none';
-        } else {
-          dots.style.display = 'none';
-
-          moreText.style.display = 'inline';
-        }
-      }
-    </script>
-    <script>
-      function myFunction3() {
-        var dots = document.getElementById('dots3');
-        var moreText = document.getElementById('more3');
-
-        if (dots.style.display === 'none') {
-          dots.style.display = 'inline';
-
-          moreText.style.display = 'none';
-        } else {
-          dots.style.display = 'none';
-
-          moreText.style.display = 'inline';
-        }
-      }
-    </script>
+    
     <include src="./partials/header-hero.html"></include>
     <include src="./partials/products.html"></include>
     <include src="./partials/about.html"></include>
@@ -92,6 +36,7 @@
     <script src="./hamburger.js"></script>
     <script src="./modal.js"></script>
     <script src="./readmoremodal.js"></script>
+    <script src="./readmoreproduct.js"></script>
     <!-- script for hamburger/modal menu -->
 
     <!-- script for slick slider -->
